# active-graph-kg

./: .env.example  .gitignore  ADVANCED_FEATURES.md  ActiveKG_Benchmark_Report_2025.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE  LICENSE-ENTERPRISE.md  Makefile  OPERATIONS.md  PRODUCTION_HARDENING_GUIDE.md  PRODUCTION_OPTIMIZATION_GUIDE.md  Procfile  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_SCAN.md  TESTING_QUICKSTART.md  backend_readiness_check.py  docker-compose.yml  enable_rls_policies.sql  enable_vector_index.sql  generate_test_jwt.py  mkdocs.yml  pyproject.toml  quick_validation.py  railway.json  requirements.txt  run_tests.sh  start_backend.sh  test_ask_jwt.py  test_fixes.sh  test_jwt_debug.py  test_kek_versioning.py  test_new_metrics.py  test_phase2_hardening.py  (+3 more)
.github/: PULL_REQUEST_TEMPLATE.md
activekg/: __init__.py
db/: init.sql
docs/: ANN_INDEXING_GUIDE.md  DEVELOPERS_GUIDE.md  DRIVE_CONNECTOR.md  GCS_CONNECTOR.md  README.md  S3_CONNECTOR.md  SCORING_MODES.md  api-reference.md  index.md
evaluation/: __init__.py  consolidate_results.py  drift_cohort_analysis.py  freshness_monitor.py  generate_test_data.py  json_utils.py  latency_benchmark.py  llm_qa_eval.py  run_all.sh  weighted_search_eval.py
examples/: reembed_all.py  seed_demo.py
frontend/: .env.example  .gitignore  E2E_RELIABILITY_IMPROVEMENTS.md  E2E_TESTING_SETUP_COMPLETE.md  JWT_SANITIZATION_FIX.md  UI_IMPLEMENTATION_COMPLETE.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
observability/: DASHBOARD_IMPROVEMENTS.md  PRODUCTION_VERIFICATION.md  README.md  README.md.backup  alertmanager.yml  grafana-dashboard.json  verify_drive_poller_observability.sh
postman/: actvgraph-kg.postman_collection.json
scripts/: README.md  admin_refresh_by_class.py  backend_readiness_check.py  db_bootstrap.sh  db_index_metrics.sh  debug_repo_search.py  dev_up.sh  dx_timing.sh  e2e_api_smoke.py  failure_recovery.sh  generate_test_jwt.py  generate_ui_jwt.py  governance_audit.sh  governance_demo.sh  ingestion_pipeline.sh  init_railway_db.py  live_extended.sh  live_smoke.sh  metrics_probe.sh  proof_points_report.sh  publish_retrieval_uplift.sh  qa_benchmark.sh  quick_validation.py  rate_limit_validation.sh  retrieval_quality.sh  scheduler_sla.sh  search_latency_eval.sh  seed_ground_truth.sh  seed_structured_data.py  smoke_test.py  start_api.sh  start_railway.sh  tco_snapshot.sh  test_integration.sh  trigger_effectiveness.sh  validate_optimization.sh
tests/: conftest.py  test_ask_jwt.py  test_auth_integration.py  test_base_engine_gaps.py  test_connector_persistence.py  test_cron_fallback.py  (+22 more)
(+112 files in other folders)
